--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site 6</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media-query.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/media-query.css">
     <script src="https://kit.fontawesome.com/37deba48f3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div class="logo-pizza">
-            <img src="imagens-pizza/pngtree-cartoon-yellow-pizza-illustration-png-image_4634672-removebg-preview.png" alt="logo da pizzaria">
+            <img src="assets/image/pngtree-cartoon-yellow-pizza-illustration-png-image_4634672-removebg-preview.png" alt="logo da pizzaria">
             <p>PizzaShop</p>
         </div>
         <nav>
@@ -49,7 +49,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio numquam molestias possimus! Voluptatem magni laudantium, sunt eius totam cum facilis temporibus iusto quas quia exercitationem deserunt obcaecati quis voluptate in. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem ipsum ipsa mollitia provident iste doloremque? Earum, ullam officia? Odio quasi veritatis laboriosam architecto repudiandae deleniti rerum est maiores fugiat ab. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt minus modi sequi sunt iusto? Suscipit animi blanditiis soluta iste asperiores sit aut aspernatur voluptate architecto dolore, reprehenderit ipsum nulla voluptatum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, fugiat nam laboriosam iste quibusdam nostrum inventore animi veniam assumenda dicta harum ex iusto quisquam expedita error accusamus sequi adipisci quos.</p>
                 </div>
                 <div class="cozinha">
-                    <img src="imagens-pizza/cozinha.jpg" alt="cozinha">
+                    <img src="assets/image/cozinha.jpg" alt="cozinha">
                 </div>
             </div>
         </section>
@@ -57,7 +57,7 @@
            <h1>CARDÁPIO</h1>
             <div class="itens-cardapio">
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/frango-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/frango-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Frango</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/calabresa-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/calabresa-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Calabresa</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/portuguesa-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/portuguesa-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Portuguesa</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/strogonoff-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/strogonoff-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Strogonoff</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/chocolate-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/chocolate-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Chocolate</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/confete-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/confete-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Confete</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/prestigio-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/prestigio-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Prestigio</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="imagens-pizza/sabores-de-pizza/sensacao-removebg-preview.png" alt="">
+                    <img src="assets/image/sabores-de-pizza/sensacao-removebg-preview.png" alt="">
                     <div class="info">
                         <h2>Sensação</h2>
                         <h4>6 FATIAS <span>R$35,00</span></h4>
@@ -159,6 +159,6 @@
     <footer>
         <p>Desenvolvido por -> Endryus Montezano</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
