--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site 6</title>
+    <title>Pizza</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/media-query.css">
     <script src="https://kit.fontawesome.com/37deba48f3.js" crossorigin="anonymous"></script>
